@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2022 the Eclipse Milo Authors
+ * Copyright (c) 2024 the Eclipse Milo Authors
  *
  * This program and the accompanying materials are made
  * available under the terms of the Eclipse Public License 2.0
@@ -10,51 +10,41 @@
 
 package org.eclipse.milo.examples.client;
 
+import java.util.Collections;
 import java.util.List;
 import java.util.concurrent.CompletableFuture;
-import java.util.concurrent.ExecutionException;
-import java.util.concurrent.atomic.AtomicLong;
 
 import org.eclipse.milo.opcua.sdk.client.OpcUaClient;
-import org.eclipse.milo.opcua.sdk.client.subscriptions.UaMonitoredItem;
-import org.eclipse.milo.opcua.sdk.client.subscriptions.UaSubscription;
+import org.eclipse.milo.opcua.sdk.client.subscriptions.OpcUaMonitoredItem;
+import org.eclipse.milo.opcua.sdk.client.subscriptions.OpcUaSubscription;
 import org.eclipse.milo.opcua.stack.core.AttributeId;
 import org.eclipse.milo.opcua.stack.core.NodeIds;
 import org.eclipse.milo.opcua.stack.core.types.builtin.DataValue;
 import org.eclipse.milo.opcua.stack.core.types.builtin.NodeId;
 import org.eclipse.milo.opcua.stack.core.types.builtin.QualifiedName;
 import org.eclipse.milo.opcua.stack.core.types.builtin.Variant;
-import org.eclipse.milo.opcua.stack.core.types.builtin.unsigned.UInteger;
 import org.eclipse.milo.opcua.stack.core.types.enumerated.MonitoringMode;
-import org.eclipse.milo.opcua.stack.core.types.enumerated.TimestampsToReturn;
-import org.eclipse.milo.opcua.stack.core.types.structured.MonitoredItemCreateRequest;
-import org.eclipse.milo.opcua.stack.core.types.structured.MonitoringParameters;
 import org.eclipse.milo.opcua.stack.core.types.structured.ReadValueId;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
-import static org.eclipse.milo.opcua.stack.core.types.builtin.unsigned.Unsigned.uint;
-
 public class TriggeringExample implements ClientExample {
 
     public static void main(String[] args) throws Exception {
-        TriggeringExample example = new TriggeringExample();
+        var example = new TriggeringExample();
 
         new ClientExampleRunner(example).run();
     }
 
     private final Logger logger = LoggerFactory.getLogger(getClass());
 
-    private final AtomicLong clientHandles = new AtomicLong(1L);
-
     @Override
     public void run(OpcUaClient client, CompletableFuture<OpcUaClient> future) throws Exception {
         client.connect();
 
         // create a subscription @ 1000ms
-        UaSubscription subscription = client.getSubscriptionManager()
-            .createSubscription(1000.0)
-            .get();
+        var subscription = new OpcUaSubscription(client);
+        subscription.create();
 
         // subscribe to a static value that reports
         ReadValueId readValueId1 = new ReadValueId(
@@ -64,7 +54,8 @@ public class TriggeringExample implements ClientExample {
             QualifiedName.NULL_VALUE
         );
 
-        UaMonitoredItem reportingItem = createMonitoredItem(subscription, readValueId1, MonitoringMode.Reporting);
+        var reportingItem = new OpcUaMonitoredItem(readValueId1);
+        subscription.addMonitoredItem(reportingItem);
 
         // subscribe to a dynamic value that only samples
         ReadValueId readValueId2 = new ReadValueId(
@@ -74,9 +65,21 @@ public class TriggeringExample implements ClientExample {
             QualifiedName.NULL_VALUE
         );
 
-        UaMonitoredItem samplingItem = createMonitoredItem(subscription, readValueId2, MonitoringMode.Sampling);
+        var samplingItem = new OpcUaMonitoredItem(readValueId2, MonitoringMode.Sampling);
+        samplingItem.setDataValueListener(
+            (item, value) ->
+                logger.info("sampling item received value: {}", value)
+        );
+        subscription.addMonitoredItem(samplingItem);
 
-        subscription.addTriggeringLinks(reportingItem, List.of(samplingItem)).get();
+        subscription.synchronizeMonitoredItems();
+
+        client.setTriggering(
+            subscription.getSubscriptionId().orElseThrow(),
+            reportingItem.getMonitoredItemId().orElseThrow(),
+            List.of(samplingItem.getMonitoredItemId().orElseThrow()),
+            Collections.emptyList()
+        );
 
         // trigger reporting of both by writing to the static item and changing its value
         client.writeValues(
@@ -86,48 +89,8 @@ public class TriggeringExample implements ClientExample {
 
         // let the example run for 5 seconds then terminate
         Thread.sleep(5000);
+        subscription.delete();
         future.complete(client);
-    }
-
-    private UaMonitoredItem createMonitoredItem(
-        UaSubscription subscription,
-        ReadValueId readValueId,
-        MonitoringMode monitoringMode
-    ) throws ExecutionException, InterruptedException {
-
-        // important: client handle must be unique per item
-        UInteger clientHandle = uint(clientHandles.getAndIncrement());
-
-        MonitoringParameters parameters = new MonitoringParameters(
-            clientHandle,
-            1000.0,
-            null,
-            uint(10),
-            true
-        );
-
-        MonitoredItemCreateRequest request = new MonitoredItemCreateRequest(
-            readValueId,
-            monitoringMode,
-            parameters
-        );
-
-        UaSubscription.ItemCreationCallback onItemCreated =
-            (item, id) -> item.setValueConsumer(this::onSubscriptionValue);
-
-        List<UaMonitoredItem> items = subscription.createMonitoredItems(
-            TimestampsToReturn.Both,
-            List.of(request),
-            onItemCreated
-        ).get();
-
-        return items.get(0);
-    }
-
-    private void onSubscriptionValue(UaMonitoredItem item, DataValue value) {
-        logger.info(
-            "subscription value received: item={}, value={}",
-            item.getReadValueId().getNodeId(), value.getValue());
     }
 
 }
